clusters/contabo-mkt/tenants/alice2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-ingress
  namespace: tenant-alice2
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: alice2.omani.rest
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-x-tenant-alice2-x-vcluster
                port:
                  number: 80
          - path: /wordpress
            pathType: Prefix
            backend:
              service:
                name: wordpress-x-tenant-alice2-x-vcluster
                port:
                  number: 80
  tls:
    - hosts:
        - alice2.omani.rest
      secretName: tenant-alice2-tls
